--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="row class_p_font">    
         <div class="col-md-4 col-xs-5"><p>班级：<input type="text" placeholder="1班"></input></p></div>
         <div class="col-md-4 col-xs-5"><p>学号：<input type="text" placeholder="001"></input></p></div>
-        <div class="col-md-4 col-xs-5"><p>姓名：<input type="text" placeholder="卓木"></input></p></div>
+        <div class="col-md-4 col-xs-5"><p>姓名：<input type="text" placeholder="kelly"></input></p></div>
       </div>    
       </div>
       <!--第一问-->
